cloudformation-code-template.json
Resources:

  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: vpc-03f993d95e53dfba0
      GroupDescription: Allow HTTP Traffic to ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: vpc-03f993d95e53dfba0
      GroupDescription: Allow traffic only from ALB
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: ami-0eb38b817b93460ac
        InstanceType: t3.micro
        SecurityGroupIds:
          - !Ref EC2SecurityGroup
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd

            # IMDSv2 token (prevents blank metadata)
            TOKEN=$(curl -X PUT "http://169.254.169.254/latest/api/token" \
            -H "X-aws-ec2-metadata-token-ttl-seconds: 21600" -s)

            INSTANCE_ID=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" \
            -s http://169.254.169.254/latest/meta-data/instance-id)

            AZ=$(curl -H "X-aws-ec2-metadata-token: $TOKEN" \
            -s http://169.254.169.254/latest/meta-data/placement/availability-zone)

            # Simple HTML output
            cat <<EOF > /var/www/html/index.html
            <h1>CloudFormation Deployment Successful</h1>
            <h2>Hello Juliet, welcome to your AWS environment.</h2>
            <h2>This instance was launched via Auto Scaling Group.</h2>
            <h3>Instance ID: $INSTANCE_ID</h3>
            <h3>Availability Zone: $AZ</h3>
            EOF
  
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: vpc-03f993d95e53dfba0
      TargetType: instance
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckIntervalSeconds: 30
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2


  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      Type: application
      SecurityGroups:
        - !Ref ALBSecurityGroup
      Subnets:
        - subnet-07cd6603c3e713a3c
        - subnet-009b8ab0f4e293de0

  ALBListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup	

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MinSize: "2"
      DesiredCapacity: "2"
      MaxSize: "4"

      VPCZoneIdentifier:
        - subnet-07cd6603c3e713a3c
        - subnet-009b8ab0f4e293de0

      TargetGroupARNs:
        - !Ref TargetGroup

      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber
      HealthCheckType: ELB
      HealthCheckGracePeriod: 120

  TargetTrackingScalingPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AutoScalingGroupName: !Ref AutoScalingGroup
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
          PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 50

  SNSTopic:
    Type: AWS::SNS::Topic
    Properties:
      TopicName: asg-alerts

  CPUAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: High CPU on ASG instances
      Namespace: AWS/AutoScaling
      MetricName: GroupAverageCPUUtilization
      Statistic: Average
      Period: 60
      EvaluationPeriods: 2
      Threshold: 70
      ComparisonOperator: GreaterThanThreshold

      Dimensions:
        - Name: AutoScalingGroupName
          Value: !Ref AutoScalingGroup

      AlarmActions:
        - !Ref SNSTopic

  UnhealthyHostAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: ALB target group has unhealthy hosts
      Namespace: AWS/ApplicationELB
      MetricName: UnHealthyHostCount
      Statistic: Average
      Period: 60
      EvaluationPeriods: 1
      Threshold: 1
      ComparisonOperator: GreaterThanOrEqualToThreshold

      Dimensions:
        - Name: TargetGroup
          Value: !GetAtt TargetGroup.TargetGroupFullName

        - Name: LoadBalancer
          Value: !GetAtt ApplicationLoadBalancer.LoadBalancerFullName

      AlarmActions:
        - !Ref SNSTopic

  SNSSubscription:
    Type: AWS::SNS::Subscription
    Properties:
      Protocol: email
      Endpoint: jffanik@gmail.com
      TopicArn: !Ref SNSTopic
